Rehacer la migracion batch con el dataset oficial de semana 3
Los archivos CSV usados antes eran una version recortada a 10-12 filas.
Se reemplazan por los oficiales de bank_legacy_data/data/semana_3, de
1000 filas cada uno, y se rehace el procesamiento sobre ellos.

Persistencia
- Los tres writers escribian por consola y no guardaban nada. Ahora usan
  JpaItemWriter contra PostgreSQL.
- Se separan los DTO del CSV (todos los campos String) de las entidades,
  para que las filas con formato invalido lleguen al processor en vez de
  reventar dentro del reader.
- Los importes pasan de Double a BigDecimal.
- intereses.csv trae 1000 filas con solo 50 cuenta_id distintos, asi que
  cuenta_id deja de ser clave primaria del detalle; el maestro por cuenta
  se consolida en un step aparte.

Reglas de negocio que faltaban
- Calculo de interes mensual por tipo de cuenta, con tasas configurables.
- Resumen diario de transacciones agrupado por fecha.
- Estado de cuenta anual por cuenta y ano, con totales por tipo.

Tolerancia a fallos
- BancoSkipPolicy distingue dato sucio (se descarta), archivo corrupto
  (tope bajo) e infraestructura (no se descarta, se reintenta).
- Los steps declaran faultTolerant, skip y retry.
- Los registros descartados quedan en la tabla errores_batch, escritos en
  una transaccion aparte para que no se pierdan en el rollback del chunk.

Escalado
- RangoLineasPartitioner reparte rangos reales de linea; el anterior
  generaba rangos inventados, estaba en un paquete que no correspondia a
  su carpeta y ningun step lo usaba.
- Pool de hilos dedicado, con particiones y chunk configurables.
- Medido: 36% menos tiempo total con 4 particiones frente a 1.

Correcciones varias
- La ruta de los CSV no coincidia con su ubicacion real.
- Se quita @EnableBatchProcessing, que en Spring Boot 3 desactiva la
  autoconfiguracion y anulaba initialize-schema.
- Las fechas se parsean en modo estricto para que 2024-13-01 falle en vez
  de corregirse en silencio.
- La JVM no te